@@ -446,6 +446,9 @@ body > header nav li a .toolTipArrow {
 
 /* @group Content */
 
+.state-private {
+	color: #E3005A;
+}
 #content-core {
 	margin-bottom: 1.25em;
 }
@@ -489,13 +492,8 @@ dl.collapsible dd.collapsibleContent {
 
 .image-left,
 .image-right {
-	background-color: #f7f7f7;
-    
-    background-image: -moz-linear-gradient(top, #f7f7f7, rgba(238, 238, 238, 0.9), #e6e6e6); /* FF3.6 */
-    background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#f7f7f7), color-stop(0.5, rgba(238, 238, 238, 0.9)), to(#e6e6e6)); /* Saf4+, Chrome */
-    filter:  progid:DXImageTransform.Microsoft.gradient(startColorStr='#f7f7f7', EndColorStr='#e6e6e6'); /* IE6,IE7 */
-    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='#f7f7f7', EndColorStr='#e6e6e6')"; /* IE8 */
-	padding: 0.41em;
+	background-color: #fff;
+	padding: 1px;
 }
 
 .image-left {
