@@ -4,6 +4,10 @@ Changelog
 0.4 - unreleased
 ----------------
 
+- Re-introduced workflow-state colors with member.css. Closes
+  https://jira.jarn.com/browse/INTRANETT-86
+  [denys]
+
 - Copied over styles for calendar that were missing for PloneFormGen calendars.
   Closes https://jira.jarn.com/browse/INTRANETT-106
   [denys]
